[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/Arvo/Arvo-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resource/models/custom/bedroom/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://resource/new_environment.tres" type="Environment" id=7]
[ext_resource path="res://resource/models/custom/walls/WallF_x2_.tscn" type="PackedScene" id=8]
[ext_resource path="res://resource/models/custom/lighting/Lamp1_.tscn" type="PackedScene" id=9]
[ext_resource path="res://resource/models/custom/floor/Floor_x2_.tscn" type="PackedScene" id=10]
[ext_resource path="res://resource/models/custom/walls/CornerWall_x2_.tscn" type="PackedScene" id=11]
[ext_resource path="res://resource/models/custom/furnature/TV.tscn" type="PackedScene" id=12]
[ext_resource path="res://resource/models/custom/furnature/RoundTable.tscn" type="PackedScene" id=13]
[ext_resource path="res://resource/enteties/coots/coots.tscn" type="PackedScene" id=14]
[ext_resource path="res://resource/models/custom/decor/noise/Radio.tscn" type="PackedScene" id=15]
[ext_resource path="res://resource/models/custom/decor/noise/Smartphone.tscn" type="PackedScene" id=16]
[ext_resource path="res://resource/models/custom/furnature/CoffeeTable.tscn" type="PackedScene" id=17]
[ext_resource path="res://resource/models/custom/decor/noise/Laptop.tscn" type="PackedScene" id=18]
[ext_resource path="res://MainMenu.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 8
outline_color = Color( 0.176471, 0.176471, 0.176471, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 19 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3.84907 )
fov = 80.0

[node name="WallF_x2_" parent="." instance=ExtResource( 8 )]

[node name="WallF_x2_2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="WallF_x2_3" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4 )

[node name="WallF_x2_4" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="Lamp1_" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, -3, 0, 1 )

[node name="Lamp1_2" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, 3, 0, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )

[node name="Floor_x2_" parent="." instance=ExtResource( 10 )]

[node name="Floor_x2_2" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.02, 0, 0, 0, -8.74228e-10, -0.01, 0, 0.02, -4.37114e-10, -2, 0, 2 )

[node name="Floor_x2_3" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.02, 0, 0, 0, -8.74228e-10, -0.01, 0, 0.02, -4.37114e-10, -2, 3, 2 )

[node name="Floor_x2_4" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.02, 0, 0, 0, -8.74228e-10, -0.01, 0, 0.02, -4.37114e-10, 2, 3, 2 )

[node name="CornerWall_x2_" parent="." instance=ExtResource( 11 )]
transform = Transform( -4.37114e-10, 0.01, -4.37114e-10, 0, -4.37114e-10, -0.01, -0.01, -4.37114e-10, 1.91069e-17, -4, 0, 1 )
skeleton = NodePath("../WallF_x2_4")

[node name="CornerWall_x2_2" parent="." instance=ExtResource( 11 )]
transform = Transform( -0.01, -8.74228e-10, 3.82138e-17, 0, -4.37114e-10, -0.01, 8.74228e-10, -0.01, 4.37114e-10, -3, 0, 4 )
skeleton = NodePath("../WallF_x2_4")

[node name="CornerWall_x2_3" parent="." instance=ExtResource( 11 )]
transform = Transform( 1.31134e-09, -0.01, 4.37114e-10, 0, -4.37114e-10, -0.01, 0.01, 1.31134e-09, -5.73206e-17, 4, 0, 3 )
skeleton = NodePath("../WallF_x2_4")

[node name="CornerWall_x2_4" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.01, 1.74846e-09, -7.64275e-17, 0, -4.37114e-10, -0.01, -1.74846e-09, 0.01, -4.37114e-10, 3, 0, -2.38419e-07 )
skeleton = NodePath("../WallF_x2_4")

[node name="RoundTable" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="coots" parent="." instance=ExtResource( 14 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 1 )

[node name="CoffeeTable" parent="." instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 1 )

[node name="CoffeeTable2" parent="." instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1 )

[node name="Laptop" parent="." instance=ExtResource( 18 )]
transform = Transform( 0.86314, 0, 0.504965, 0, 1, 0, -0.504965, 0, 0.86314, -2.35864, 0.802832, 1 )

[node name="Radio" parent="." instance=ExtResource( 15 )]
transform = Transform( 0.966223, 0, 0.257706, 0, 1, 0, -0.257706, 0, 0.966223, -1.61636, 0.849261, 0.942559 )

[node name="RigidBody" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.960016, 0, -0.279946, 0, 1, 0, 0.279946, 0, 0.960016, 1.62046, 0.902964, 1.16224 )

[node name="RigidBody2" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.960016, 0, -0.279946, 0, 1, 0, 0.279946, 0, 0.960016, 2.46131, 0.902964, 1.16224 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.258824, 0.219608, 0.517647 )

[node name="MainMenu" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MainMenu"]
margin_left = 232.0
margin_top = 121.0
margin_right = 1048.0
margin_bottom = 598.0

[node name="LogoLabel" type="Label" parent="Menu/MainMenu/VBoxContainer"]
margin_right = 816.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0.552941, 0.552941, 0.552941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Coots Nap Time"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MainMenu/VBoxContainer"]
margin_top = 126.0
margin_right = 816.0
margin_bottom = 477.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MainMenu/VBoxContainer/HBoxContainer"]
margin_right = 384.0
margin_bottom = 351.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 97.0

[node name="PlayButton" type="Button" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 220.0
margin_bottom = 97.0
theme = ExtResource( 2 )
text = "PLAY"

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 384.0
margin_bottom = 224.0

[node name="OptionsButton" type="Button" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 384.0
margin_bottom = 97.0
theme = ExtResource( 2 )
text = "OPTIONS"

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 384.0
margin_bottom = 351.0

[node name="QuitButton" type="Button" parent="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 213.0
margin_bottom = 97.0
theme = ExtResource( 2 )
text = "QUIT"

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 232.0
margin_top = 197.0
margin_right = 1048.0
margin_bottom = 523.0

[node name="LogoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 816.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0.552941, 0.552941, 0.552941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Coots Nap Time"

[node name="ColorRect" type="ColorRect" parent="CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 816.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 200 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/MainMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
